Cinnamon - fix menu search entry icon visibilty in some themes

--- a/src/cinnamon/scss/sections/_menu.scss
+++ b/src/cinnamon/scss/sections/_menu.scss
@@ -259,7 +259,7 @@
 }
 .menu-search-entry-icon {
 	icon-size: 1em;
-	color: $dark_fg_color;
+	color: $tooltip_fg_color;
 }
 // cinnVIIstark menu right click favourites context menu
 .starkmenu-favorites-box {
